[package]
name = "libigraph-sys"
version = "0.1.0"
authors = ["Robert Keith <robertfkeith@me.com>"]
edition = "2018"
links = "igraph"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"

[build-dependencies.autotools]
version = "0.2"

[build-dependencies.bindgen]
version = "*"
